--- a/data/tabular/RedDB/meta.yaml
+++ b/data/tabular/RedDB/meta.yaml
@@ -11,12 +11,6 @@ description: |-
     (iii) aqueous solubility prediction using machine learning,
     (iv) data processing and database creation, have been described.
 targets:
-    - id: solubilityAqSolPred
-      description: Aqueous solubility prediction using machine learning
-      units: logS
-      type: continuous
-      names:
-          - noun: ML-predicted aqueous solubility
     - id: molecularSurface
       description: Total surface area of a molecule
       units: \AA^2
@@ -27,6 +21,7 @@ targets:
       description: Energy associated with the interaction during a chemical reaction
       units: kT
       type: continuous
+      significant_digits: 5
       names:
           - noun: chemical reaction field energy
     - id: solventAccessSurface
@@ -44,6 +39,7 @@ targets:
     - id: gasEnergy
       description: Total energy of a molecule in the gas phase
       units: Hartree
+      significant_digits: 5
       type: continuous
       names:
           - noun: gas-phase molecular energy at the PBE level of theory
@@ -51,53 +47,70 @@ targets:
       description: Highest Occupied Molecular Orbital (HOMO) energy of a gas-phase molecule
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: gaseous phase HOMO energy at the PBE level of theory
+          - noun: gaseous phase highest occupied molecular orbital energy at the PBE level of theory
+          - noun: gaseous phase highest occupied molecular orbital (HOMO) energy at the PBE level of theory
     - id: gasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of a gas-phase molecule
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: gaseous phase LUMO energy at the PBE level of theory
+          - noun: gaseous phase lowest unoccupied molecular orbital energy at the PBE level of theory
+          - noun: gaseous phase lowest unoccupied molecular orbital energy (LUMO) at the PBE level of theory
     - id: solutionEnergy
       description: Total energy of a molecule in a solution
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: aqueous phase molecular energy at the PBE level of theory
     - id: solutionHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy in a solution
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: aqueous phase HOMO energy at the PBE level of theory
+          - noun: aqueous phase energy of the highest occupied molecular orbital at the PBE level of theory
+          - noun: aqueous phase energy of the highest occupied molecular orbital (HOMO) at the PBE level of theory
     - id: solutionLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy in a solution
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: aqueous phase LUMO energy at the PBE level of theory
+          - noun: aqueous phase energy of the lowest unoccupied molecular orbital at the PBE level of theory
+          - noun: aqueous phase energy of the lowest unoccupied molecular orbital (LUMO) at the PBE level of theory
     - id: nuclearRepulsionEnergy
       description: Electrostatic repulsion energy between atomic nuclei in a molecule
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: nuclear repulsion energy at the PBE level of theory
     - id: optGasEnergy
       description: Total energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: optimized gas-phase molecular energy at the PBE level of theory
     - id: optGasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
+      significant_digits: 5
       names:
           - noun: optimized gas-phase HOMO energy at the PBE level of theory
     - id: optGasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of an optimized gas-phase molecule
       units: Hartree
+      significant_digits: 5
       type: continuous
       names:
           - noun: optimized gas-phase LUMO energy calculated at the PBE level of theory
@@ -106,9 +119,6 @@ identifiers:
     - id: SMILES
       type: SMILES
       description: SMILES
-    - id: InChI
-      type: InChI
-      description: InChI
 license: CC BY 4.0
 links:
     - url: https://doi.org/10.1038/s41597-022-01832-2
@@ -128,8 +138,6 @@ bibtex:
       Suleyman Er},
       journal = {Nature Scientific Data}
 templates:
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {solubilityAqSolPred__names__noun}
-      of {solubilityAqSolPred#} {solubilityAqSolPred__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {molecularSurface__names__noun}
       of {molecularSurface#} {molecularSurface__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {reactionFieldEnergy__names__noun}
@@ -144,7 +152,7 @@ templates:
       of {gasHomo#} {gasHomo__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {gasLumo__names__noun}
       of {gasLumo#} {gasLumo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {solutionEnergy__names__noun}
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has an {solutionEnergy__names__noun}
       of {solutionEnergy#} {solutionEnergy__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {solutionLumo__names__noun}
       of {solutionLumo#} {solutionLumo__units}.
@@ -154,48 +162,7 @@ templates:
       of {optGasEnergy#} {optGasEnergy__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {optGasHomo__names__noun}
       of {optGasHomo#} {optGasHomo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {optGasLumo__names__noun}
-      of {optGasLumo#} {optGasLumo__units}.The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation
-      of |!}{InChI#} has a {solubilityAqSolPred__names__noun} of {solubilityAqSolPred#} {solubilityAqSolPred__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {molecularSurface__names__noun}
-      of {molecularSurface#} {molecularSurface__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {reactionFieldEnergy__names__noun}
-      of {reactionFieldEnergy#} {reactionFieldEnergy__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {solventAccessSurface__names__noun}
-      of {solventAccessSurface#} {solventAccessSurface__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {cavityEnergy__names__noun}
-      of {cavityEnergy#} {cavityEnergy__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {gasEnergy__names__noun}
-      of {gasEnergy#} {gasEnergy__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {gasHomo__names__noun}
-      of {gasHomo#} {gasHomo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {gasLumo__names__noun}
-      of {gasLumo#} {gasLumo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {solutionEnergy__names__noun}
-      of {solutionEnergy#} {solutionEnergy__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {solutionLumo__names__noun}
-      of {solutionLumo#} {solutionLumo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {nuclearRepulsionEnergy__names__noun}
-      of {nuclearRepulsionEnergy#} {nuclearRepulsionEnergy__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {optGasEnergy__names__noun}
-      of {optGasEnergy#} {optGasEnergy__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {optGasHomo__names__noun}
-      of {optGasHomo#} {optGasHomo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {optGasLumo__names__noun}
-      of {optGasLumo#} {optGasLumo__units}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: It has an {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} and a {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
+      Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and an {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
       Result: {SMILES#}
-    - |-
-      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} based on the {#text |!}description{# below|!}.
-      Description: It has an {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} and a {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
-      Result: {InChI#}
-    - |-
-      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
-      Result: {SMILES#}
-    - |-
-      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} based on the {#text |!}description{# below|!}.
-      Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
-      Result: {InChI#}
