--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -93,7 +93,7 @@ templates:
       Constraint: Answer the question in a {#full|complete!} sentence.
       Result: This molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - |-
-      Task: Please {#give me|create|generate!} a molecule {SMILES__description} based on the {#text |!}description{# below|!}.
+      Task: Please {#give me|create|generate!} the {SMILES__description} of a {#molecule|chemical|chemical compound!} based on the {#text |!}description{# below|!}.
       Description: A molecule that is {penetrate_BBB__names__adjective}.
       Result: {SMILES#}
     - |-
@@ -109,7 +109,7 @@ templates:
       User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
       Assistant: This is a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}: {SMILES#}
     - |-
-      User: I want to {#come up with|create|generate!} a molecule {SMILES__description}.
+      User: I want to {#come up with|create|generate!} the {SMILES__description} of a {#molecule|chemical!}.
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
       User: Yes, please. The molecule should {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
       Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}: {SMILES#}
